# first_project_Django

./: .env.exemple  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: init_db.sql
src/hotel_booking/: manage.py  settings.py  urls.py
src/hotel_booking/apps/bookings/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
src/hotel_booking/apps/rooms/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
src/hotel_booking/config/: settings.py
tests/: test_bookings.py  test_rooms.py
